fix for typed js on mobile

--- a/scss/store/filters.scss
+++ b/scss/store/filters.scss
@@ -126,6 +126,9 @@
   position: absolute;
   top: 0;
   background: $white;
+  @media (max-width: 767px) {
+      display: none;
+  }
 
   &.is-paused {
     display: none;
